infra-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ms
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /ms_cliente
            pathType: Prefix
            backend:
              service:
                name: ms_cliente
                port:
                  number: 80
          - path: /ms_produto
            pathType: Prefix
            backend:
              service:
                name: ms_produto
                port:
                  number: 80
          - path: /ms_pedido
            pathType: Prefix
            backend:
              service:
                name: ms_produto
                port:
                  number: 80
